# CHAT-VLM-LLM

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DISPERSI0NO_REPO_SYNC_SUCCESS.md  Dockerfile  Dockerfile.light  FINAL_FIX_SUMMARY.md  FIX_ERRNO22_WINDOWS.md  FIX_MODEL_SWITCHING.md  LICENSE  QUICK_FIX.md  README.md  README_DEV.md  READY_TO_USE.md  SYSTEM_STATUS_REPORT.md  WINDOWS_SYMLINKS_FIX_SUCCESS.md  api.py  app.py  clear_cache.py  config.yaml  disable_symlinks_startup.py  docker-compose-vllm.yml  docker-compose.yml  fix_model_switching.py  fix_qwen3_cache.py  fix_qwen3_windows_symlinks.py  fix_symlinks_final.py  fix_windows_cache_paths.py  force_no_symlinks.py  monitor_logs.py  mypy.ini  nginx.conf  pull_vllm_image.bat  pull_vllm_image.py  pyproject.toml  requirements.txt  single_container_manager.py  (+6 more)
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: api_guide.md  architecture.md  gpu_requirements.md  models.md
dots_ocr/: utils.py
examples/: README.md  api_usage.py
models/: __init__.py  base_model.py  dots_ocr.py  dots_ocr_final.py  got_ocr.py  model_loader.py  qwen3_vl.py  qwen_vl.py
models/experimental/: __init__.py  got_ocr_variants.py  phi3_vision.py
notebooks/: 01_model_exploration.ipynb  02_batch_processing.ipynb  README.md
scripts/: check_gpu.py  check_models.py  check_setup.py  cleanup.py  download_models.py  run_tests.sh  setup.sh  setup_gpu.py
tests/: __init__.py  conftest.py  test_api.py  test_api_security.py  test_cache.py  test_coverage_extra.py  test_model_inference.py  test_models.py  test_rate_limiter.py  test_single_container_manager.py  test_ui_utils.py  test_utils.py  test_vllm_streamlit_adapter.py
ui/: __init__.py  bbox_display.py  components.py  message_renderer.py  sidebar.py  styles.py
ui/pages/: __init__.py  chat.py  docs.py  home.py  ocr.py
utils/: __init__.py  bbox_table_renderer.py  bbox_visualizer.py  cache.py  constants.py  dots_prompts.py  env_validator.py  export.py  field_parser.py  html_table_renderer.py  image_processor.py  logger.py  logging_config.py  markdown_renderer.py  model_cache.py  ocr_output_processor.py  smart_content_renderer.py  table_parser.py  table_renderer.py  text_extractor.py  validators.py  xml_formatter.py  xml_table_parser.py
