[project]
name = "chat-vlm-llm"
version = "0.1.0"
description = "VLM/LLM models for document OCR and text recognition"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
exclude = "(?x)(tests/|notebooks/|scripts/|experimental/)"

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_errors = true
