[project]
name = "chat-vlm-llm"
version = "0.1.0"
description = "VLM/LLM models for document OCR and text recognition"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
omit = [
    "tests/*",
    "scripts/*",
    "notebooks/*",
    "experimental/*",
    "*/__init__.py",
    "conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "pass",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
ignore_missing_imports = true
exclude = "(?x)(tests/|notebooks/|scripts/|experimental/)"

# Strict for core modules
[[tool.mypy.overrides]]
module = [
    "single_container_manager",
    "vllm_streamlit_adapter",
    "api",
    "utils.*",
    "ui.components",
    "ui.message_renderer",
]
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_generics = true

# Relaxed for third-party heavy modules
[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "torch.*",
    "transformers.*",
    "docker.*",
    "PIL.*",
    "vllm.*",
    "fastapi.*",
    "uvicorn.*",
]
ignore_errors = true
ignore_missing_imports = true

# Relaxed for model wrappers (heavy torch/transformers usage)
[[tool.mypy.overrides]]
module = "models.*"
disallow_untyped_defs = false
check_untyped_defs = true
